fix: chart spec

--- a/chart/k8sreq-duplicator-controller/templates/metrics-rbac.yaml
+++ b/chart/k8sreq-duplicator-controller/templates/metrics-rbac.yaml
@@ -30,6 +30,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ template "k8sreq-duplicator-controller.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
