feat!: rename project, align ci pipelines

--- a/.github/workflows/rebase.yaml
+++ b/.github/workflows/rebase.yaml
@@ -11,6 +11,10 @@ jobs:
     if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/rebase') && (github.event.comment.author_association == 'CONTRIBUTOR' || github.event.comment.author_association == 'MEMBER' || github.event.comment.author_association == 'OWNER')
     runs-on: ubuntu-latest
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@1b05615854632b887b69ae1be8cbefe72d3ae423 # v2.6.0
+        with:
+          egress-policy: audit    
       - name: Checkout the latest code
         uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b #v3
         with:
