--- a/config/tests/cases/simple/kustomization.yaml
+++ b/config/tests/cases/simple/kustomization.yaml
@@ -1,21 +1,22 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: k8sreq-system
+namespace: webhook-system
 
 resources: 
 - ../../../default
 - requestclone.yaml
+- verify-pod.yaml
 
 helmCharts:
 - repo: https://stefanprodan.github.io/podinfo
   name: podinfo
   version: 6.3.5
   releaseName: podinfo
-  namespace: k8sreq-system
+  namespace: webhook-system
   valuesInline:
     replicaCount: 1
 
 images:
-- name: ghcr.io/doodlescheduling/k8sreq-duplicator-controller
+- name: ghcr.io/doodlescheduling/webhook-controller
   newTag: latest
-  newName: k8sreq-duplicator-controller
+  newName: webhook-controller
