--- a/chart/webhook-controller/templates/clusterrole-edit.yaml
+++ b/chart/webhook-controller/templates/clusterrole-edit.yaml
@@ -2,13 +2,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "k8sreq-duplicator-controller.fullname" . }}-view
+  name: {{ template "webhook-controller.fullname" . }}-edit
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
-    rbac.authorization.k8s.io/aggregate-to-view: "true"
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
+    rbac.authorization.k8s.io/aggregate-to-edit: "true"
+    rbac.authorization.k8s.io/aggregate-to-admin: "true"
   annotations:
     {{- toYaml .Values.annotations | nindent 4 }}
 rules:
@@ -17,8 +18,12 @@ rules:
   resources:
   - requestclones
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - "proxy.infra.doodle.com"
