--- a/chart/webhook-controller/templates/clusterrole-view.yaml
+++ b/chart/webhook-controller/templates/clusterrole-view.yaml
@@ -2,34 +2,23 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "k8sreq-duplicator-controller.fullname" . }}
+  name: {{ template "webhook-controller.fullname" . }}-view
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
+    rbac.authorization.k8s.io/aggregate-to-view: "true"
   annotations:
     {{- toYaml .Values.annotations | nindent 4 }}
 rules:
-- apiGroups:
-  - ""
-  resources:
-    - services
-  verbs:
-    - get
-    - list
-    - watch
 - apiGroups:
   - "proxy.infra.doodle.com"
   resources:
   - requestclones
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - "proxy.infra.doodle.com"
@@ -37,18 +26,4 @@ rules:
   - requestclones/status
   verbs:
   - get
-  - patch
-  - update
-- apiGroups:
-  - ""
-  resources:
-  - events
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
 {{- end }}
