--- a/chart/webhook-controller/templates/clusterrole.yaml
+++ b/chart/webhook-controller/templates/clusterrole.yaml
@@ -2,17 +2,23 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "k8sreq-duplicator-controller.fullname" . }}-edit
+  name: {{ template "webhook-controller.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
-    rbac.authorization.k8s.io/aggregate-to-edit: "true"
-    rbac.authorization.k8s.io/aggregate-to-admin: "true"
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
   annotations:
     {{- toYaml .Values.annotations | nindent 4 }}
 rules:
+- apiGroups:
+  - ""
+  resources:
+    - services
+  verbs:
+    - get
+    - list
+    - watch
 - apiGroups:
   - "proxy.infra.doodle.com"
   resources:
@@ -31,4 +37,18 @@ rules:
   - requestclones/status
   verbs:
   - get
+  - patch
+  - update
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 {{- end }}
