--- a/chart/webhook-controller/templates/deployment.yaml
+++ b/chart/webhook-controller/templates/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "k8sreq-duplicator-controller.fullname" . }}
+  name: {{ include "webhook-controller.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
   annotations:
     {{- toYaml .Values.annotations | nindent 4 }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+      app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
@@ -22,12 +22,12 @@ spec:
           {{- toYaml .Values.podAnnotations | nindent 8 }}
         {{- end }}
       labels:
-        app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+        app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
-      serviceAccountName: {{ template "k8sreq-duplicator-controller.serviceAccountName" . }}
+      serviceAccountName: {{ template "webhook-controller.serviceAccountName" . }}
       containers:
-      - name: k8sreq-duplicator-controller
+      - name: webhook-controller
         env:
         {{- if .Values.env }}
         {{- range $key, $value := .Values.env }}
