--- a/chart/webhook-controller/templates/metrics-rbac.yaml
+++ b/chart/webhook-controller/templates/metrics-rbac.yaml
@@ -2,12 +2,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "k8sreq-duplicator-controller.fullname" . }}-metrics-reader
+  name: {{ include "webhook-controller.fullname" . }}-metrics-reader
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
 rules:
 - nonResourceURLs:
   - "/metrics"
@@ -17,48 +17,48 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "k8sreq-duplicator-controller.fullname" . }}-metrics
+  name: {{ include "webhook-controller.fullname" . }}-metrics
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "k8sreq-duplicator-controller.fullname" . }}-metrics-reader
+  name: {{ include "webhook-controller.fullname" . }}-metrics-reader
 subjects:
 - kind: ServiceAccount
-  name: {{ template "k8sreq-duplicator-controller.serviceAccountName" . }}
+  name: {{ template "webhook-controller.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "k8sreq-duplicator-controller.fullname" . }}-proxy
+  name: {{ include "webhook-controller.fullname" . }}-proxy
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "k8sreq-duplicator-controller.fullname" . }}-proxy
+  name: {{ include "webhook-controller.fullname" . }}-proxy
 subjects:
 - kind: ServiceAccount
-  name: {{ template "k8sreq-duplicator-controller.serviceAccountName" . }}
+  name: {{ template "webhook-controller.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "k8sreq-duplicator-controller.fullname" . }}-proxy
+  name: {{ include "webhook-controller.fullname" . }}-proxy
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
 rules:
 - apiGroups:
   - authentication.k8s.io
