--- a/chart/webhook-controller/templates/role.yaml
+++ b/chart/webhook-controller/templates/role.yaml
@@ -1,12 +1,12 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "k8sreq-duplicator-controller.fullname" . }}
+  name: {{ template "webhook-controller.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
   annotations:
     {{- toYaml .Values.annotations | nindent 4 }}
 rules:
