--- a/chart/webhook-controller/templates/service.yaml
+++ b/chart/webhook-controller/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "k8sreq-duplicator-controller.fullname" . }}
+  name: {{ include "webhook-controller.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "k8sreq-duplicator-controller.chart" . }}
+    helm.sh/chart: {{ include "webhook-controller.chart" . }}
 {{- if .Values.service.labels }}
 {{ toYaml .Values.service.labels | indent 4 }}
 {{- end }}
@@ -23,6 +23,6 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    app.kubernetes.io/name: {{ include "k8sreq-duplicator-controller.name" . }}
+    app.kubernetes.io/name: {{ include "webhook-controller.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
   type: {{ .Values.service.type }}
