--- a/config/base/manager/service.yaml
+++ b/config/base/manager/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: k8sreq-duplicator-controller
+  name: webhook-controller
 spec:
   ports:
     - port: 8080
