--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
-namespace: k8sreq-system
+namespace: webhook-system
 resources:
 - ../base/crd
 - ../base/rbac
