--- a/config/base/rbac/role.yaml
+++ b/config/base/rbac/role.yaml
@@ -2,7 +2,6 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
   name: manager-role
 rules:
 - apiGroups:
@@ -15,15 +14,16 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - namespaces
   - services
   verbs:
   - get
   - list
   - watch
 - apiGroups:
-  - proxy.infra.doodle.com
+  - webhook.infra.doodle.com
   resources:
-  - requestclones
+  - receivers
   verbs:
   - create
   - delete
@@ -33,9 +33,9 @@ rules:
   - update
   - watch
 - apiGroups:
-  - proxy.infra.doodle.com
+  - webhook.infra.doodle.com
   resources:
-  - requestclones/status
+  - receivers/status
   verbs:
   - get
   - patch
