--- a/chart/webhook-controller/templates/clusterrole.yaml
+++ b/chart/webhook-controller/templates/clusterrole.yaml
@@ -14,15 +14,16 @@ rules:
 - apiGroups:
   - ""
   resources:
+    - namespaces
     - services
   verbs:
     - get
     - list
     - watch
 - apiGroups:
-  - "proxy.infra.doodle.com"
+  - "webhook.infra.doodle.com"
   resources:
-  - requestclones
+  - receivers
   verbs:
   - create
   - delete
@@ -32,9 +33,9 @@ rules:
   - update
   - watch
 - apiGroups:
-  - "proxy.infra.doodle.com"
+  - "webhook.infra.doodle.com"
   resources:
-  - requestclones/status
+  - receivers/status
   verbs:
   - get
   - patch
